text-align:center

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1574,6 +1574,7 @@ h3{
 .profile,.Design,.invest,.hand-holding{
   h2{
     font-size: 12px;
+    text-align: center;
   }
 }
 .investing-info1 h3, .investing-info2 h3 {
