--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -12,7 +12,7 @@
     </div>
 <div class="row">
   <div class="col-md-offset-1 col-md-10">
-    <ul class="breadcrumb">
+    <ul class="breadcrumb howworks">
       <li class="invest-info1">
         <figure>
           <img src="img/works/comp.png" alt="computer">
@@ -45,7 +45,7 @@
   </div>
   <div class="row">
     <div class="col-md-offset-1 col-md-10">
-      <ul class="breadcrumb">
+      <ul class="breadcrumb howworks">
         <li class="investing-info1">
           <figure>
             <img src="img/works/profile.png" alt="meeting">
@@ -72,7 +72,7 @@
   </div>
   <div class="row">
     <div class="col-md-offset-1 col-md-10">
-      <ul class="breadcrumb">
+      <ul class="breadcrumb howworks">
         <li class="invest-infos1">
           <figure>
             <img src="img/works/diet.png" alt="meeting">
@@ -113,7 +113,7 @@
   </div>
   <div class="row">
     <div class="col-md-offset-1 col-md-10">
-      <ul class="breadcrumb">
+      <ul class="breadcrumb howworks">
         <li class="invest-info1">
           <div class="min-height">
             <figure>
@@ -164,7 +164,7 @@
         <div class=" col-md-5 col-sm-5 col-xs-12">
           <div class="packages text-center">
             <h2 class="about text-uppercase text-center text-bold  font-semibold">YOU CAN FIND OUT ABOUT <br>OUR HEALTH PACKAGES HERE</h2>
-            <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space">click here</button>
+            <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space" ui-sref="healthpackages">click here</button>
           </div>
         </div>
       </div>
