bmi width changes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2721,12 +2721,12 @@ footer {
   }
 }
 .scroll-stats {
-  padding-bottom: 25px;
+  padding: 0px 40px 25px;
   overflow-x: scroll;
   overflow-y: hidden;
 }
 .result-bar {
-  width: 903px;
+  width: 847px;
   .progress {
     height: 60px;
     margin-top: 100px;
