--- a/views/content/knowyourstats.html
+++ b/views/content/knowyourstats.html
@@ -20,8 +20,8 @@
                     <div class="col-md-5 col-sm-5">
                       <div class="text-center">
                         <span class="text-uppercase inline-block">Choose a food group :</span>
-                        <select class="" ng-change="getProducts(productrequest.category)" ng-model="productrequest.category">
-                          <option ng-repeat="category in foodgroup" value="{{category.name}}">{{category.name}}</option>
+                        <select class="text-uppercase" ng-change="getProducts(productrequest.category)" ng-model="productrequest.category">
+                          <option ng-repeat="category in foodgroup" class="" value="{{category.name}}">{{category.name}}</option>
 
                         </select>
                       </div>
