--- a/views/header.html
+++ b/views/header.html
@@ -73,8 +73,8 @@
           <div class="user-block inline-block">
             <div class="location inline-block">
               <ul class="list-inline m-clear">
-                <li><a href=""><img src="img/map1.png" alt="" class="img-responsive"></a></li>
-                <li><a href=""><img src="img/map2.png" alt="" class="img-responsive"></a></li>
+                <li><a href="" ng-click="openindia();"><img src="img/map1.png" alt="" class="img-responsive"></a></li>
+                <li><a href="" ng-click="openworld();"><img src="img/map2.png" alt="" class="img-responsive"></a></li>
               </ul>
             </div>
             <div class="cart-icon relate" ng-controller="countChange">
