--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3204,6 +3204,18 @@ footer {
     text-decoration: underline !important;
   }
 }
+.country-pop {
+  h3 { margin: 30px 70px; }
+  .success-btn {
+    margin-bottom: 30px;
+     a {
+       padding: 8px 26px;
+       margin: 0px 10px;
+       font-size: 16px;
+       letter-spacing: 2px;
+     }
+  }
+}
 // end forgot and popup
 // scroll-top
 .scroll-top {
