country change without state reload

--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -117,7 +117,7 @@
       opacity: 0.5;
     }
   }
-  .location-active { opacity: 1; }
+  .location-active { opacity: 1 !important; }
 // location end
 // Signin
 .signin {
