--- a/views/modal/countryworld.html
+++ b/views/modal/countryworld.html
@@ -4,7 +4,7 @@
   </div>
   <h3 class="text-uppercase text-center">Are you sure you want to change the location to rest of the world?</h3>
   <div class="success-btn text-center">
-    <a href="" class="btn btn-primary text-uppercase">yes</a>
-    <a class="btn btn-primary text-uppercase">no</a>
+    <a href="" class="btn btn-primary text-uppercase" ng-click="changeToIndia(false)">yes</a>
+    <a class="btn btn-primary text-uppercase" ng-click="$close();">no</a>
   </div>
 </div>
