--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -13,7 +13,7 @@
           </div>
       <h3 class="text-uppercase brand-brown-dark letter-space font-semibold">Items you would like to purchase</h3>
       <div class="text-center" ng-if="msg!=''">
-        {{msg}}
+        <h3 class="brand-brown-dark ">{{msg}}</h3>
       </div>
       <div class="cart-table">
         <table class="table" ng-if="allcart.length > 0">
