--- a/views/modal/countryindia.html
+++ b/views/modal/countryindia.html
@@ -3,6 +3,7 @@
       <h2 class="text-uppercase text-center white m-clear">Location</h2>
   </div>
   <h3 class="text-uppercase text-center">Are you sure you want to change the location to India?</h3>
+  <p class="cart-reset">Your cart will be reset once you change your location.</p>
   <div class="success-btn text-center">
     <a href="" class="btn btn-primary text-uppercase" ng-click="changeToIndia(true)">yes</a>
     <a class="btn btn-primary text-uppercase" ng-click="$close();">no</a>
