how it works linking

--- a/views/footer.html
+++ b/views/footer.html
@@ -64,6 +64,12 @@
               <li>
                 <a href="#/team" title="The Self Care Team">The Self Care Team</a>
               </li>
+              <li>
+                <a href="#/selfcaretv" title="Selfcare 'TV'">Selfcare 'TV'</a>
+              </li>
+              <li>
+                <a href="#/howitworks" title="How It Works">How It Works</a>
+              </li>
             </ul>
           </div>
         </div>
