--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3629,6 +3629,8 @@ input[type=number]::-webkit-outer-spin-button {
     }
 
 }
+// loader
+.loadingcfp { display: none; }
 @import "harsh";
 @import "mobile";
 @import "mobile_harsh";
