--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -65,7 +65,7 @@
             <button class="btn btn-primary text-uppercase" ng-click="doSignup(accept,signup,signupForm)">Signup</button>
           </div>
         </form>
-        <div class="text-center text-uppercase">
+        <div class="text-center text-uppercase mt10">
           <span class="block or">or</span>
           <p>sign up via</p>
         </div>
